# lifeline

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Doxyfile  LICENSE  README.md
CMake/: BuildWarnings.cmake  ExternalDependencyRuntimes.cmake  LifelineVars.cmake  SetMSVCRuntimeLibrary.cmake  SetupBuildWarnings.cmake  SetupExternalDependencies.cmake  SetupExternalLibraries.cmake  SetupLibraries.cmake  SetupMSVCRuntimeLibrary.cmake
CMake/ConfigureFileTemplates/: project.vcxproj.user.in
CMake/Modules/: FindBox2D.cmake  FindCPPFormat.cmake  FindGLEW.cmake  FindLuaBridge.cmake  FindSDL2.cmake  FindSDL2_ttf.cmake
doc/: coding_conventions.txt
docs/: coding_conventions.txt  engine_flowchart.odg
resources/shaders/: debug_draw.frag  debug_draw.vert  solid_color.frag  solid_color.vert  textured.frag  textured.vert
resources/shaders/2D/: debug_draw.frag  debug_draw.vert  solid_color.frag  solid_color.vert  textured.frag  textured.vert
resources/tilemaps/: test.tm
resources/tilesets/test/: test.tsd  test.xcf
src/: OS_interface.cpp  OS_interface.h  main.cpp
src/Engine/: OS_interface.h
src/LE/: main.cpp
src/LE/common/: char.h  cppformat.h  dt_timer.cpp  dt_timer.h  fatal_construction_exception.cpp  fatal_construction_exception.h  fatal_error.cpp  fatal_error.h  file_string.cpp  logging.cpp  logging.h  macros.h  profiling.h  profiling_records.cpp  profiling_records.h  rapidjson.cpp  rapidjson.h  resource.cpp  resource.h  resource_exception.cpp  resource_exception.h  resource_manager.cpp  resource_manager.h  timer.cpp  unique_id.h
src/LE/devui/: perf_vis.cpp  perf_vis.h
src/LE/engine/: OS_interface.cpp  OS_interface.h  TTF_system.cpp  TTF_system.h  camera_component.cpp  camera_component.h  component_base.cpp  component_base.h  engine.cpp  engine.h  engine_component_base.cpp  engine_component_base.h  entity.cpp  entity.h  entity.hpp  graphics_context.cpp  graphics_system.cpp  graphics_system.h  input_system.cpp  input_system.h  logic_component_base.cpp  logic_component_base.h  logic_system.cpp  logic_system.h  space.cpp  space.h  space.hpp  sprite_component.cpp  sprite_component.h  tilemap_component.cpp  tilemap_component.h  transform_component.cpp  transform_component.h  window.cpp  window.h
src/LE/game/: game_hack.cpp  game_hack.h
src/LE/graphics/: colors.cpp  colors.h  debug_draw_manager.h  debug_drawer.cpp  debug_drawer.h  error_checking.h  renderable_array.cpp  renderable_array.h  renderable_array.hpp  renderable_buffer.cpp  renderable_buffer.h  renderable_buffer.hpp  shader.cpp  shader.h  shader_program.cpp  shader_program.h  stb_image.cpp  texture.cpp  texture.h  vertex.cpp  vertex.h  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
src/LE/math/: mat.cpp  mat.h  mat.hpp  transform.cpp  transform.h  vec.h  vec.hpp
src/common/: LE_printf.cpp  LE_printf.h  assert.h  cppformat.h  error.cpp  error.h  fatal_construction_exception.cpp  fatal_construction_exception.h  fatal_error.cpp  fatal_error.h  file_string.cpp  file_string.h  logging.cpp  logging.h  macros.h  message_exception.cpp  message_exception.h  profiling.cpp  profiling.h  profiling.hpp  profiling_records.cpp  profiling_records.h  resource.cpp  resource.h  resource_exception.cpp  resource_exception.h  resource_manager.cpp  resource_manager.h  timer.cpp  timer.h  unique_id.cpp  unique_id.h  unique_id.hpp
src/devui/: perf_vis.cpp  perf_vis.h
src/engine/: OS_interface.cpp  OS_interface.h  TTF_system.cpp  TTF_system.h  component_base.cpp  component_base.h  engine.cpp  engine.h  engine_component_base.cpp  engine_component_base.h  entity.cpp  entity.h  entity.hpp  entity_manager.cpp  entity_manager.h  graphics_component.cpp  graphics_component.h  graphics_context.cpp  graphics_context.h  graphics_system.cpp  graphics_system.h  input_system.cpp  logging.cpp  logging.h  logic_component_base.cpp  logic_component_base.h  logic_system.cpp  logic_system.h  resource_manager.cpp  resource_manager.h  space.cpp  space.h  sprite_component.cpp  sprite_component.h  sprite_text_system.cpp  sprite_text_system.h  system_base.cpp  system_base.h  transform_component.cpp  transform_component.h  (+2 more)
src/game/: game_hack.cpp  game_hack.h  logging.cpp  logging.h
src/graphics/: debug_draw_manager.cpp  debug_draw_manager.h  debug_drawer.cpp  debug_drawer.h  error_checking.cpp  error_checking.h  logging.cpp  logging.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  shader_program_definition.cpp  shader_program_definition.h  stb_image.cpp  texture.cpp  texture.h  texture2D.cpp  texture2D.h  vertex.cpp  vertex.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
src/math/: float.cpp  float.h  float.hpp  logging.cpp  logging.h  mat.cpp  mat.h  mat.hpp  mat3.cpp  mat3.h  transform.cpp  transform.h  vec.cpp  vec.h  vec.hpp  vec2.cpp  vec2.h  vec3.cpp  vec3.h
util/cppclassgen/: main.cpp
utils/cppclassgen/: CMakeLists.txt  main.cpp
utils/templates/: cpp_license.template
